feat: 상품 조회 기능 테스트 코드 구현

--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -66,6 +66,9 @@
         </div>
 
     </div>
+
+    <hr class="horizontal dark my-5"/>
+
     <div class="row">
         <div th:utext="${product.productDescription}"></div>
     </div>
