--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -273,15 +273,23 @@
                                 </li>
 
                                 <!-- ADMIN_MENU -->
-                                <li class="nav-item me-1">
-                                    <a class="nav-link" sec:authorize="hasRole('ROLE_ADMIN')" href="#"
+                                <li class="nav-item me-1" sec:authorize="hasRole('ROLE_ADMIN')" >
+                                    <a class="nav-link" href="#"
                                        th:href="@{/admin/menu}">관리자 메뉴</a>
                                 </li>
 
                                 <!-- SELLER_MENU -->
-                                <li class="nav-item me-1">
-                                    <a class="nav-link" sec:authorize="hasRole('ROLE_SELLER')" href="#"
+                                <li class="nav-item me-1" sec:authorize="hasRole('ROLE_SELLER')">
+                                    <a class="nav-link" href="#"
                                        th:href="@{/seller/menu}">판매자 메뉴</a>
+                                </li>
+
+                                <li class="nav-item me-1" sec:authorize="isAuthenticated()">
+                                    <a class="nav-link" href="#" th:href="@{/shopping-bag/list}">
+                                        <i class="ni ni-bag-17">
+                                            <span class="text-primary text-bolder" th:text="${shoppingBagCount}">1</span>
+                                        </i>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
