--- a/src/main/resources/templates/seller/new-product.html
+++ b/src/main/resources/templates/seller/new-product.html
@@ -181,7 +181,8 @@
                         newProductImage.append(img);
 
                         croppie = new Croppie(img, {
-                            viewport: {width: 240, height: 160}
+                            viewport: {width: 240, height: 160},
+                            enableResize: true
                         });
 
 
