--- a/src/main/resources/templates/seller/edit-product.html
+++ b/src/main/resources/templates/seller/edit-product.html
@@ -63,7 +63,7 @@
                 <div class="card-body">
                     <div class="row justify-content-center">
                         <form class="needs-validation col-sm-10" action="#"
-                              th:action="@{/admin/product/{id}(id=${productForm.id})}"
+                              th:action="@{/seller/product/{id}(id=${productForm.id})}"
                               th:object="${productForm}"
                               method="post" novalidate>
 
@@ -101,6 +101,19 @@
                                 <small class="form-text text-dark font-weight-bolder text-gradient"
                                        id="formattedPrice"></small>
                                 <small class="form-text text-muted" id="productPriceHelp">상품 가격을 입력해주세요.</small>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('productPrice')}"
+                                       th:errors="*{productPrice}"></small>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="saleRate">할인율(%단위)</label>
+                                <input id="saleRate" type="number" class="form-control" placeholder="할인률"
+                                       aria-describedby="saleRateHelp"
+                                       th:field="*{saleRate}" min="0" max="100"/>
+                                <small class="form-text text-dark font-weight-bolder text-gradient"
+                                       id="saleFormattedPrice"></small>
+                                <small class="form-text text-muted" id="saleRateHelp">할인율을 입력해주세요. 0으로 두면 할인이
+                                    적용되지 않습니다.</small>
                             </div>
 
                             <div class="form-group">
@@ -109,6 +122,8 @@
                                        aria-describedby="productStockHelp"
                                        th:field="*{productStock}" required min="0"/>
                                 <small class="form-text text-muted" id="productStockHelp">상품 수량을 입력해주세요.</small>
+                                <small class="form-text text-danger" th:if="${#fields.hasErrors('productStock')}"
+                                       th:errors="*{productStock}"></small>
                             </div>
 
 
@@ -251,6 +266,27 @@
         }
 
     })();
+</script>
+<script th:fragment="currencyFormatter">
+    (function () {
+        let salePriceDisplay = document.querySelector('#saleFormattedPrice');
+        salePriceDisplay.style.display = 'none';
+        const originalPrice = document.querySelector('#productPrice');
+        const saleRateInput = document.querySelector('#saleRate');
+
+        saleRateInput.onkeyup = function () {
+            const saleRate = saleRateInput.value;
+            let originalPriceValue = originalPrice.value;
+            salePriceDisplay.innerText = new Intl.NumberFormat('ko-KR', {
+                style: 'currency',
+                currency: 'KRW'
+            }).format(originalPriceValue - (originalPriceValue * saleRate * 0.01));
+            if (salePriceDisplay.style.display === 'none') {
+                salePriceDisplay.style.display = 'block';
+            }
+        };
+
+    }());
 </script>
 
 
