--- a/src/main/resources/templates/shopping-bag/list.html
+++ b/src/main/resources/templates/shopping-bag/list.html
@@ -28,7 +28,6 @@
                         <th class="text-uppercase text-secondary text-lg font-weight-bolder ps-2">수량 / 가격</th>
                         <th class="text-uppercase text-secondary text-lg font-weight-bolder ps-2"></th>
 
-
                     </tr>
                     </thead>
                     <tbody>
@@ -41,10 +40,19 @@
                                 </div>
                                 <div class="d-flex flex-column justify-content-center">
                                     <h6 class="mb-0 text-xs" th:text="${shoppingBag.productName}">상품 이미지</h6>
-                                    <p class="text-xs text-secondary mb-0"
+
+                                    <p th:if="${!shoppingBag.isSale()}" class="text-xs text-secondary mb-0"
                                        th:text="${#numbers.formatCurrency(shoppingBag.productPrice)}">
-                                        상품 가격
                                     </p>
+
+                                    <span th:if="${shoppingBag.isSale()}" class="text-xs mb-0">
+                                        <del class="text-secondary"
+                                             th:text="${#numbers.formatCurrency(shoppingBag.productPrice)}"></del>
+                                        <span class="text-danger text-secondary"
+                                              th:text="${'-' +  shoppingBag.saleRate + '%'}"></span>
+                                        <span class="d-block text-darker" id="salePriceDisplay"
+                                              th:text="${#numbers.formatCurrency(shoppingBag.salePrice)}"></span>
+                                    </span>
                                 </div>
                             </div>
                         </td>
