--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -61,7 +61,7 @@
 
 
                     <!-- TODO 사용자 등급 보여주고 예상 할인 가격과 포인트 적립 보여주기 -->
-                    <form action="#" method="post" class="row row-cols-lg-auto g-3 my-auto">
+                    <form action="#" th:action="@{/order/direct(productId=${product.id})}" method="post" class="row row-cols-lg-auto g-3 my-auto">
                         <input type="hidden" id="productId" th:value="${product.id}"/>
                         <div class="col-12 align-items-center">
                             <label class="visually-hidden" for="quantity">수량</label>
@@ -77,7 +77,7 @@
                             </button>
                         </div>
 
-                        <div class="col-12 align-items-center">
+                        <div th:if="${!product.isShoppingBagAdded()}" class="col-12 align-items-center">
                             <button type="submit" class="btn btn-primary">바로구매</button>
                         </div>
 
