--- a/src/main/resources/templates/shopping-bag/list.html
+++ b/src/main/resources/templates/shopping-bag/list.html
@@ -34,6 +34,10 @@
                     <tr th:each="shoppingBag : ${shoppingBagList}">
                         <td>
                             <div class="d-flex px-2 py-1">
+                                <div class="form-check">
+                                    <input type="checkbox" id="shoppingBagId" th:value="${shoppingBag.shoppingBagId}"
+                                           class="form-check-input"/>
+                                </div>
                                 <div>
                                     <img th:src="${shoppingBag.productImage}"
                                          class="avatar avatar-sm me-3">
@@ -61,7 +65,7 @@
                             <p class="text-xs font-weight-bold mb-0" th:text="${shoppingBag.shoppingBagQuantity + '개'}">
                                 수량</p>
                             <p class="text-xs text-secondary mb-0"
-                               th:text="${#numbers.formatCurrency(shoppingBag.shoppingBagQuantity * shoppingBag.productPrice)}">
+                               th:text="${#numbers.formatCurrency(shoppingBag.getTotalPrice())}">
                                 총 가격</p>
                         </td>
                         <td>
@@ -69,19 +73,24 @@
                                     class="btn btn-outline-danger btn-sm">취소하기
                             </button>
                         </td>
-
-
                     </tr>
-
-
                     </tbody>
                 </table>
 
                 <div class="card-footer text-center">
-                    <h5 class="mt-3 mb-1 d-md-block">합계 : <span
-                            class="h5 mb-0 text-lg font-weight-bolder text-primary text-gradient text-uppercase"
-                            th:text="${#numbers.formatCurrency(totalPrice)}"></span></h5>
+                    <h5 class="mt-3 mb-1 d-md-block">합계 :
+                        <span class="h5 mb-0 text-lg font-weight-bolder text-primary text-gradient text-uppercase"
+                            id="totalPriceDisplay" th:text="${#numbers.formatCurrency(0)}">
+                        </span>
+                    </h5>
+                </div>
 
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-8">
+                        <form action="#" method="get" th:action="@{/order}" id="shoppingBagIdArrayForm">
+                            <button type="button" id="orderBtn" class="btn bg-gradient-primary btn-lg w-100">주문하기</button>
+                        </form>
+                    </div>
                 </div>
             </div>
             <hr class="horizontal dark mb-3"/>
@@ -94,6 +103,93 @@
 
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
+<script>
+    (function () {
+        document.querySelector('#orderBtn').onclick = function () {
+            let idArray = [];
+            const shoppingBagIdElements = document.querySelectorAll('#shoppingBagId');
+
+
+            shoppingBagIdElements.forEach(element => {
+                if (element.checked) {
+                    idArray.push(element.value);
+                }
+            });
+
+            if (idArray.length === 0) {
+                alert('체크된 장바구니 물품이 없습니다.');
+            } else {
+                /* 여기서 부터 작업 시작 */
+                const form = document.querySelector('#shoppingBagIdArrayForm');
+                const hiddenField = document.createElement('input');
+                hiddenField.setAttribute('type', 'hidden');
+                hiddenField.setAttribute('name', 'idArray');
+                hiddenField.setAttribute('value', idArray);
+                console.log(hiddenField);
+                form.appendChild(hiddenField);
+                form.submit();
+            }
+        };
+    }());
+</script>
+<script th:inline="javascript">
+    (function () {
+
+        /*<![CDATA[*/
+        let shoppingBagList = /*[[ ${shoppingBagList} ]]*/;
+        /*]]*/
+
+        let totalPrice = 0;
+        const totalPriceDisplay = document.querySelector('#totalPriceDisplay');
+        const shoppingBagIdElements = document.querySelectorAll('#shoppingBagId');
+        console.log(shoppingBagIdElements);
+
+        shoppingBagIdElements.forEach(element => {
+            element.onchange = function (event) {
+                if (event.target.checked) {
+                    shoppingBagList.forEach(shoppingBag => {
+                        if (isSameShoppingBagId(shoppingBag, event)) {
+                            if (shoppingBag.sale) {
+                                totalPrice += getTotalSalePrice(shoppingBag);
+                            } else {
+                                totalPrice += getTotalPrice(shoppingBag);
+                            }
+                        }
+                    });
+                } else {
+                    shoppingBagList.forEach(shoppingBag => {
+                        if (isSameShoppingBagId(shoppingBag, event)) {
+                            if (shoppingBag.sale) {
+                                totalPrice -= getTotalSalePrice(shoppingBag);
+                            } else {
+                                totalPrice -= getTotalPrice(shoppingBag);
+                            }
+                        }
+                    });
+                }
+
+                totalPriceDisplay.innerText = new Intl.NumberFormat('ko-KR', {
+                    style: 'currency',
+                    currency: 'KRW'
+                }).format(totalPrice);
+            };
+        });
+
+        function getTotalSalePrice(shoppingBag) {
+            return shoppingBag.salePrice * shoppingBag.shoppingBagQuantity;
+        }
+
+        function getTotalPrice(shoppingBag) {
+            return shoppingBag.productPrice * shoppingBag.shoppingBagQuantity;
+        }
+
+        function isSameShoppingBagId(shoppingBag, event) {
+            return shoppingBag.shoppingBagId == event.target.value;
+        }
+
+
+    }());
+</script>
 <script>
     function removeItem(productId) {
 
