--- a/src/main/resources/templates/shopping-bag/list.html
+++ b/src/main/resources/templates/shopping-bag/list.html
@@ -87,7 +87,7 @@
 
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-8">
-                        <form action="#" method="get" th:action="@{/order}" id="shoppingBagIdArrayForm">
+                        <form action="#" method="get" th:action="@{/order/form}" id="shoppingBagIdArrayForm">
                             <button type="button" id="orderBtn" class="btn bg-gradient-primary btn-lg w-100">주문하기</button>
                         </form>
                     </div>
