--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -133,7 +133,7 @@
 <!-- ORDER_MODAL_END -->
 
 
-<div class="row">
+<div class="row mx-3">
     <div class="container col-md-4">
         <div class="card my-5 shadow-xl" th:if="${orderReadyList.size() > 0}" th:each="order: ${orderReadyList}">
             <div class="card-body">
@@ -189,6 +189,8 @@
             <div class="row">
                 <span class="ms-3 text-uppercase text-secondary text-lg font-weight-bolder">주소</span>
                 <h6 class="ms-3 text-sm" th:text="${order.address.city + ' ' + order.address.street + ' ' + order.address.zipcode}"></h6>
+                <span class="ms-3 text-uppercase text-secondary text-lg font-weight-bolder">구매 확정시</span>
+                <h6 class="ms-3 text-sm" th:text="${#numbers.formatInteger((order.totalSumPrice * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 1, 'COMMA') + ' 포인트 적립 예정'}"></h6>
             </div>
             <div class="card-footer text-center">
                 <h5 class="mt-3 mb-1">합계 :
@@ -264,6 +266,13 @@
             <div class="row">
                 <span class="ms-3 text-uppercase text-secondary text-lg font-weight-bolder">주소</span>
                 <h6 class="ms-3 text-sm" th:text="${order.address.city + ' ' + order.address.street + ' ' + order.address.zipcode}"></h6>
+                <!-- TODO 포인트 적립된 기록 고치기 -->
+                <span class="ms-3 text-uppercase text-secondary text-lg font-weight-bolder"
+                      th:text="${#numbers.formatInteger(order.savedPoint, 1, 'COMMA') + ' 포인트 적립됨'}">
+                </span>
+
+
+
             </div>
             <div class="card-footer text-center">
                 <h5 class="mt-3 mb-1">합계 :
