--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments.html::head"></head>
 <body>
 <span th:replace="fragments.html::main-nav"></span>
@@ -50,6 +50,19 @@
                               th:text="${#numbers.formatCurrency(product.getSalePrice())}"></span>
                     </span>
 
+                    <div class="text-info text-gradient font-weight-bolder" th:text="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.gradeName + ' 등급 혜택'}"></div>
+                    <p class="my-auto" th:if="${!product.isSale()}">
+                        <span class="text-dark text-muted">구매 확정시</span>
+                        <span class="text-primary text-gradient font-weight-bolder text-lg" th:text="${#numbers.formatInteger((product.productPrice * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 3, 'COMMA')}"></span>
+                        <span class="text-dark text-muted"> 포인트 적립 예정</span>
+                    </p>
+
+                    <p class="my-auto" th:if="${product.isSale()}">
+                        <span class="text-dark text-muted">구매 확정시</span>
+                        <span class="text-primary text-gradient font-weight-bolder text-lg" th:text="${#numbers.formatInteger((product.getSalePrice() * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 3, 'COMMA')}"></span>
+                        <span class="text-dark text-muted"> 포인트 적립 예정</span>
+                    </p>
+
 
                     <input th:if="${!product.isSale()}" type="hidden" id="currentPrice" th:value="${product.productPrice}"/>
                     <input th:if="${product.isSale()}" type="hidden" id="currentSalePrice"
@@ -58,8 +71,6 @@
                     <p class="card-description mb-4">
                         <span th:text="${product.productStock + '개 남음'}"></span>
                     </p>
-
-
                     <!-- TODO 사용자 등급 보여주고 예상 할인 가격과 포인트 적립 보여주기 -->
                     <form action="#" th:action="@{/order/direct}" method="post" class="row row-cols-lg-auto g-3 my-auto">
                         <input type="hidden" name="productId" id="productId" th:value="${product.id}"/>
@@ -68,11 +79,11 @@
                             <input type="number" class="form-control" name="quantity" id="quantity" value="1" placeholder="수량" min="0"/>
                         </div>
 
-                        <div th:if="${!product.isShoppingBagAdded()}" class="col-12 align-items-center">
+                        <div sec:authorize="isAuthenticated()" th:if="${!product.isShoppingBagAdded()}" class="col-12 align-items-center">
                             <button type="button" id="addShoppingBagBtn" class="btn btn-outline-info">장바구니 담기</button>
                         </div>
 
-                        <div th:if="${product.isShoppingBagAdded()}" class="col-12 align-items-center">
+                        <div sec:authorize="isAuthenticated()" th:if="${product.isShoppingBagAdded()}" class="col-12 align-items-center">
                             <button type="button" id="minusShoppingBagBtn" class="btn btn-outline-danger">장바구니 빼기
                             </button>
                         </div>
@@ -99,7 +110,7 @@
     <footer th:replace="fragments.html::footer"></footer>
 </div>
 </body>
-<script th:if="${!product.isShoppingBagAdded()}">
+<script sec:authorize="isAuthenticated()" th:if="${!product.isShoppingBagAdded()}">
     (function () {
         const addBtn = document.querySelector('#addShoppingBagBtn');
 
@@ -138,7 +149,7 @@
         };
     }());
 </script>
-<script th:if="${product.isShoppingBagAdded()}">
+<script sec:authorize="isAuthenticated()" th:if="${product.isShoppingBagAdded()}">
     const minusBtn = document.querySelector('#minusShoppingBagBtn');
 
     minusBtn.onclick = function () {
