--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -50,8 +50,8 @@
                               th:text="${#numbers.formatCurrency(product.getSalePrice())}"></span>
                     </span>
 
-                    <div class="text-info text-gradient font-weight-bolder" th:text="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.gradeName + ' 등급 혜택'}"></div>
-                    <p class="my-auto" th:if="${!product.isSale()}">
+                    <div sec:authorize="isAuthenticated()" class="text-info text-gradient font-weight-bolder" th:text="${#conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.gradeName + ' 등급 혜택'}"></div>
+                    <p sec:authorize="isAuthenticated()" class="my-auto" th:if="${!product.isSale()}">
                         <span class="text-dark text-muted">구매 확정시</span>
                         <span class="text-primary text-gradient font-weight-bolder text-lg" th:text="${#numbers.formatInteger((product.productPrice * #conversions.convert(#authentication.principal, T(io.twosom.ecommerce.account.UserAccount)).account.memberGrade.pointSaveRate) / 100 , 3, 'COMMA')}"></span>
                         <span class="text-dark text-muted"> 포인트 적립 예정</span>
